--- a/config/database.yml
+++ b/config/database.yml
@@ -34,8 +34,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV.fetch("DATABASE_USER") {} %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {} %>
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
